--- a/sparepart_tahun_2020.html
+++ b/sparepart_tahun_2020.html
@@ -234,14 +234,16 @@ div.tocify {
 <h3>Tabel Ajuan dari User</h3>
 <pre class="r"><code>kable(total_ajuan_03, digits = 3, format.args = list(big.mark = &quot;,&quot;, 
   scientific = FALSE)) %&gt;%
-  kable_styling(bootstrap_options = &quot;striped&quot;, full_width = F, position = &quot;left&quot;)</code></pre>
-<table class="table table-striped" style="width: auto !important; ">
+   kable_styling(bootstrap_options = c(&quot;striped&quot;, &quot;hover&quot;, &quot;condensed&quot;), full_width = F, position = &quot;left&quot;, font_size = 10, fixed_thead = T) %&gt;% 
+  column_spec(2, bold = T, width = &quot;8em&quot;, background = &quot;#e8f0fe&quot;) %&gt;%
+  row_spec(0, background = &quot;#617aa6&quot;, color = &quot;white&quot;)</code></pre>
+<table class="table table-striped table-hover table-condensed" style="font-size: 10px; width: auto !important; ">
 <thead>
 <tr>
-<th style="text-align:left;">
+<th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;color: white !important;background-color: #617aa6 !important;">
 NAMA.SEKSI.PLANNER
 </th>
-<th style="text-align:right;">
+<th style="text-align:right;position: sticky; top:0; background-color: #FFFFFF;color: white !important;background-color: #617aa6 !important;">
 jumlah
 </th>
 </tr>
@@ -251,7 +253,7 @@ jumlah
 <td style="text-align:left;">
 SECTION OF AF &amp; 3RD MATERIAL
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 53,412,764
 </td>
 </tr>
@@ -259,7 +261,7 @@ SECTION OF AF &amp; 3RD MATERIAL
 <td style="text-align:left;">
 SECTION OF CONSTRUCTION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 580,564,535
 </td>
 </tr>
@@ -267,7 +269,7 @@ SECTION OF CONSTRUCTION
 <td style="text-align:left;">
 SECTION OF CRUSHER ELINS MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 493,169,000
 </td>
 </tr>
@@ -275,7 +277,7 @@ SECTION OF CRUSHER ELINS MAINT
 <td style="text-align:left;">
 SECTION OF CRUSHER MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 398,699,020
 </td>
 </tr>
@@ -283,7 +285,7 @@ SECTION OF CRUSHER MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF CRUSHER OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 81,290,975
 </td>
 </tr>
@@ -291,7 +293,7 @@ SECTION OF CRUSHER OPERATION
 <td style="text-align:left;">
 SECTION OF ELECTRICAL &amp; INSTR WORKSHOP
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 968,811,398
 </td>
 </tr>
@@ -299,7 +301,7 @@ SECTION OF ELECTRICAL &amp; INSTR WORKSHOP
 <td style="text-align:left;">
 SECTION OF EPDC MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 2,053,279,776
 </td>
 </tr>
@@ -307,7 +309,7 @@ SECTION OF EPDC MAINTENANCE
 <td style="text-align:left;">
 SECTION OF FM 1-2 ELECT &amp; INSTR MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 205,927,063
 </td>
 </tr>
@@ -315,7 +317,7 @@ SECTION OF FM 1-2 ELECT &amp; INSTR MAINT
 <td style="text-align:left;">
 SECTION OF FM 1-2 MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 1,653,089,463
 </td>
 </tr>
@@ -323,7 +325,7 @@ SECTION OF FM 1-2 MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF FM 1-2 OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 3,858,017,425
 </td>
 </tr>
@@ -331,7 +333,7 @@ SECTION OF FM 1-2 OPERATION
 <td style="text-align:left;">
 SECTION OF FM 3-4 ELECT &amp; INSTR MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 213,353,587
 </td>
 </tr>
@@ -339,7 +341,7 @@ SECTION OF FM 3-4 ELECT &amp; INSTR MAINT
 <td style="text-align:left;">
 SECTION OF FM 3-4 MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -347,7 +349,7 @@ SECTION OF FM 3-4 MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF FM 3-4 OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 164,774,785
 </td>
 </tr>
@@ -355,7 +357,7 @@ SECTION OF FM 3-4 OPERATION
 <td style="text-align:left;">
 SECTION OF GRESIK PLANT OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 7,200,000
 </td>
 </tr>
@@ -363,7 +365,7 @@ SECTION OF GRESIK PLANT OPERATION
 <td style="text-align:left;">
 SECTION OF GRESIK PLANT&amp;PORT ELECT MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 114,389,628
 </td>
 </tr>
@@ -371,7 +373,7 @@ SECTION OF GRESIK PLANT&amp;PORT ELECT MAINT
 <td style="text-align:left;">
 SECTION OF GSK PLANT&amp;PORT MACHINE MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 49,403,010
 </td>
 </tr>
@@ -379,7 +381,7 @@ SECTION OF GSK PLANT&amp;PORT MACHINE MAINT
 <td style="text-align:left;">
 SECTION OF HEAVY EQUIP &amp; COAL TRANSPORT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -387,7 +389,7 @@ SECTION OF HEAVY EQUIP &amp; COAL TRANSPORT
 <td style="text-align:left;">
 SECTION OF HYGIENE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -395,7 +397,7 @@ SECTION OF HYGIENE
 <td style="text-align:left;">
 SECTION OF KCM 1-2 MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 577,688,267
 </td>
 </tr>
@@ -403,7 +405,7 @@ SECTION OF KCM 1-2 MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF KCM 3-4 MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 5,668,382,895
 </td>
 </tr>
@@ -411,7 +413,7 @@ SECTION OF KCM 3-4 MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF MACHINE WORKSHOP
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 1,166,775,255
 </td>
 </tr>
@@ -419,7 +421,7 @@ SECTION OF MACHINE WORKSHOP
 <td style="text-align:left;">
 SECTION OF MAINTENANCE INSPECTION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -427,7 +429,7 @@ SECTION OF MAINTENANCE INSPECTION
 <td style="text-align:left;">
 SECTION OF PACKER &amp; TBN PORT ELINS MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 870,650,603
 </td>
 </tr>
@@ -435,7 +437,7 @@ SECTION OF PACKER &amp; TBN PORT ELINS MAINT
 <td style="text-align:left;">
 SECTION OF PACKER OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 67,872,410
 </td>
 </tr>
@@ -443,7 +445,7 @@ SECTION OF PACKER OPERATION
 <td style="text-align:left;">
 SECTION OF PACKER&amp;TBN PORT MACHINE MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 1,170,363,406
 </td>
 </tr>
@@ -451,7 +453,7 @@ SECTION OF PACKER&amp;TBN PORT MACHINE MAINT
 <td style="text-align:left;">
 SECTION OF RKC 1-2 ELECTRICAL MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 1,099,445,825
 </td>
 </tr>
@@ -459,7 +461,7 @@ SECTION OF RKC 1-2 ELECTRICAL MAINT
 <td style="text-align:left;">
 SECTION OF RKC 1-2 INSTRUMENT MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 527,523,395
 </td>
 </tr>
@@ -467,7 +469,7 @@ SECTION OF RKC 1-2 INSTRUMENT MAINT
 <td style="text-align:left;">
 SECTION OF RKC 1 OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 31,499,908
 </td>
 </tr>
@@ -475,7 +477,7 @@ SECTION OF RKC 1 OPERATION
 <td style="text-align:left;">
 SECTION OF RKC 2 OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -483,7 +485,7 @@ SECTION OF RKC 2 OPERATION
 <td style="text-align:left;">
 SECTION OF RKC 3-4 ELECTRICAL MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 999,870,779
 </td>
 </tr>
@@ -491,7 +493,7 @@ SECTION OF RKC 3-4 ELECTRICAL MAINT
 <td style="text-align:left;">
 SECTION OF RKC 3-4 INSTRUMENT MAINT
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 385,548,356
 </td>
 </tr>
@@ -499,7 +501,7 @@ SECTION OF RKC 3-4 INSTRUMENT MAINT
 <td style="text-align:left;">
 SECTION OF RKC 3 OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 22,011,262,154
 </td>
 </tr>
@@ -507,7 +509,7 @@ SECTION OF RKC 3 OPERATION
 <td style="text-align:left;">
 SECTION OF RKC 4 OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 29,875,757
 </td>
 </tr>
@@ -515,7 +517,7 @@ SECTION OF RKC 4 OPERATION
 <td style="text-align:left;">
 SECTION OF RM 1-2 MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 604,809,350
 </td>
 </tr>
@@ -523,7 +525,7 @@ SECTION OF RM 1-2 MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF RM 3-4 MACHINE MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 1,242,757,089
 </td>
 </tr>
@@ -531,7 +533,7 @@ SECTION OF RM 3-4 MACHINE MAINTENANCE
 <td style="text-align:left;">
 SECTION OF UTILITY MAINTENANCE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 4,045,583,657
 </td>
 </tr>
@@ -539,7 +541,7 @@ SECTION OF UTILITY MAINTENANCE
 <td style="text-align:left;">
 SECTION OF UTILITY OPERATION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -547,7 +549,7 @@ SECTION OF UTILITY OPERATION
 <td style="text-align:left;">
 UNIT OF GENERAL AFFAIR &amp; ASSET
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -555,7 +557,7 @@ UNIT OF GENERAL AFFAIR &amp; ASSET
 <td style="text-align:left;">
 UNIT OF MAINTENANCE INSPECTION
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 43,790,334
 </td>
 </tr>
@@ -563,7 +565,7 @@ UNIT OF MAINTENANCE INSPECTION
 <td style="text-align:left;">
 UNIT OF MINING
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -571,7 +573,7 @@ UNIT OF MINING
 <td style="text-align:left;">
 UNIT OF QUALITY CONTROL
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 49,660,362
 </td>
 </tr>
@@ -579,7 +581,7 @@ UNIT OF QUALITY CONTROL
 <td style="text-align:left;">
 UNIT OF TUBAN &amp; GRESIK SHE
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
@@ -587,7 +589,7 @@ UNIT OF TUBAN &amp; GRESIK SHE
 <td style="text-align:left;">
 UNIT PROC SERVISE &amp; INVENTORY BU
 </td>
-<td style="text-align:right;">
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
 </td>
 </tr>
