tambah tabel realisasi

--- a/sparepart_tahun_2020.html
+++ b/sparepart_tahun_2020.html
@@ -232,11 +232,6 @@ div.tocify {
 <p>Halaman ini berisi laporan ajuan dan realisasi sparepart periode maret 2020</p>
 <div id="tabel-ajuan-dari-user" class="section level3">
 <h3>Tabel Ajuan dari User</h3>
-<pre class="r"><code>kable(total_ajuan_03, digits = 3, format.args = list(big.mark = &quot;,&quot;, 
-  scientific = FALSE)) %&gt;%
-   kable_styling(bootstrap_options = c(&quot;striped&quot;, &quot;hover&quot;, &quot;condensed&quot;), full_width = F, position = &quot;left&quot;, font_size = 10, fixed_thead = T) %&gt;% 
-  column_spec(2, bold = T, width = &quot;8em&quot;, background = &quot;#e8f0fe&quot;) %&gt;%
-  row_spec(0, background = &quot;#617aa6&quot;, color = &quot;white&quot;)</code></pre>
 <table class="table table-striped table-hover table-condensed" style="font-size: 10px; width: auto !important; ">
 <thead>
 <tr>
@@ -591,6 +586,344 @@ UNIT PROC SERVISE &amp; INVENTORY BU
 </td>
 <td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
 0
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="daftar-jumlah-realisasi-sparepart-per-unit-kerja" class="section level3">
+<h3>Daftar Jumlah Realisasi sparepart per unit kerja</h3>
+<hr />
+<table class="table table-striped table-hover table-condensed" style="font-size: 10px; width: auto !important; ">
+<thead>
+<tr>
+<th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;color: white !important;background-color: grey !important;">
+NAMA.SEKSI.PG
+</th>
+<th style="text-align:right;position: sticky; top:0; background-color: #FFFFFF;color: white !important;background-color: grey !important;">
+jumlah
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+SECTION OF AF &amp; 3RD MATERIAL
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+376,275,807
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF CONSTRUCTION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+252,873,192
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF CRUSHER ELINS MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+138,288,835
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF CRUSHER MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+1,461,662,788
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF CRUSHER OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+45,147,998
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF ELECTRICAL &amp; INSTR WORKSHOP
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+704,966,251
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF EPDC MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+1,158,272,406
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF FM 1-2 ELECT &amp; INSTR MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+392,092,533
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF FM 1-2 MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+780,523,657
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF FM 1-2 OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+63,559,961
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF FM 3-4 ELECT &amp; INSTR MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+191,698,987
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF FM 3-4 MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+982,288,839
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF FM 3-4 OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+54,317,900
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF GRESIK PLANT OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+6,480,000
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF GRESIK PLANT&amp;PORT ELECT MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+9,241,106
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF GSK PLANT&amp;PORT MACHINE MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+21,589,837
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF HYGIENE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+49,858,142
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF KCM 1-2 MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+545,572,287
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF KCM 3-4 MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+4,787,924,671
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF MACHINE WORKSHOP
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+1,231,862,594
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF MAINTENANCE INSPECTION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+114,286
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF PACKER &amp; TBN PORT ELINS MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+230,404,974
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF PACKER OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+12,014,962
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF PACKER&amp;TBN PORT MACHINE MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+482,007,332
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 1-2 ELECTRICAL MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+468,405,300
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 1-2 INSTRUMENT MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+760,001,972
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 1 OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+15,355,570
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 2 OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+45,181,210
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 3-4 ELECTRICAL MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+481,845,260
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 3-4 INSTRUMENT MAINT
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+385,586,323
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 3 OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+1,936,503,435
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RKC 4 OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+33,617,739
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RM 1-2 MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+306,487,319
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF RM 3-4 MACHINE MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+2,354,001,257
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF UTILITY MAINTENANCE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+3,318,971,421
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+SECTION OF UTILITY OPERATION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+71,089,794
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+UNIT OF GENERAL AFFAIR &amp; ASSET
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+54,638,731
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+UNIT OF MAINTENANCE INSPECTION
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+15,974,401
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+UNIT OF QUALITY CONTROL
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+54,623,086
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+UNIT OF TUBAN &amp; GRESIK SHE
+</td>
+<td style="text-align:right;width: 8em; font-weight: bold;background-color: #e8f0fe !important;">
+127,223,700
 </td>
 </tr>
 </tbody>
